<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">decodeTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

	<string name="scantest_back">decodeTest</string>
	<string name="activate_test">license激活</string>
	<string name="decode_test">decode测试</string>
	<string name="activate_license">激活license</string>
	<string name="file_path">license文件存放路径:</string>
	
	<string name="get_lib_ver">获取解码库版本号</string>
	<string name="check_license">检查license是否有效</string>
	
	<string name="activate_feature">获取设备特征信息</string>
	<string name="file_path_feature">特征值文件存放路径:</string>

	<string name="text_preview_vga">"预览分辨率640*480"</string>
	<string name="text_preview_hd">"预览分辨率1920*1080"</string>
	
	

</resources>
